<resources>
    <string name="app_name">TripTracker</string>

    <!-- 3.1.1 -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">Log In</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="cancel_sign_up_text">Cancel Sign Up</string>
    <string name="sign_up_name">Name</string>
    <string name="sign_me_up_button_label">SIGN ME UP</string>

    <!-- 3.1.2 -->
    <string name="be_app_id">C38EA754-2149-F7C0-FF9B-4948AFA6BE00</string>
    <string name="be_android_api_key">E76DFBB7-8CC2-6E25-FF42-F24DCD135E00</string>
    <string name="authentication_error_title">User Authentication Error!</string>
    <string name="empty_field_signup_error">Be sure you have entered an email address, password, and name.</string>
    <string name="empty_field_login_error">Please enter an email address and password.</string>
    <string name="invalid_email_error">Please enter a valid email address.</string>
    <string name="password_six_characters_error">You password must contain at least 6 characters.</string>
    <string name="password_cannot_equal_email_error">Your password and email address may not be the same.</string>
    <string name="progress_title">Please Wait!</string>
    <string name="progress_sign_up_message">Creating and registering your account...</string>
    <string name="progress_login_message">Logging in...</string>

    <string name="action_post">Post</string>
    <string name="action_delete">Delete</string>
    <string name="action_logout">Sign Out</string>

    <string name="trip_name_label">Trip Name</string>
    <string name="trip_name_hint">Trip Name</string>
    <string name="trip_details_label">Trip Details</string>
    <string name="trip_desc_hint">Trip Description</string>
    <string name="start_date_label">Start Date</string>
    <string name="start_date_hint">Start Date</string>
    <string name="end_date_label">End Date</string>
    <string name="end_date_hint">End Date</string>
    <string name="trip_public_label">Public</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_new">New</string>
    <string name="action_public_trips">Public Trips</string>
    <string name="action_my_trips">My Trips</string>

    <string name="trip_details_text">Trip Details</string>

    <string name="post_error_message">Message</string>
    <string name="post_error_title">Title</string>

    <string name="delete_error_message">Message</string>
    <string name="delete_error_title">Title</string>

    <string name="trip_error_message">Message</string>
    <string name="trip_error_title">Title</string>
</resources>
